--- a/Main/bio/bio.css
+++ b/Main/bio/bio.css
@@ -31,6 +31,29 @@ body{
     align-items: center;
     
 }
+a:visited {
+  color: rgb(131, 131, 131);
+  background-color: transparent;
+  text-decoration: none;
+  border-top: .1em solid rgb(131, 131, 131);
+}
+a:link {
+  color: cornsilk;
+  background-color: transparent;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+  position: relative;
+}
 .Bio {
             
     display: grid;
